# tenq_data_summarizer

./: .dockerignore  .env  .env.example  README.md  llm.txt  pyproject.toml
app/agents/: decision_agent.py  dependencies.py  insights_agent.py  models.py  orchestrator.py
app/api/: main.py  schemas.py
app/config/: settings.py
app/edgar/: cik_resolver.py  client.py  downloader.py  metadata_cache.py  models.py  storage.py  submissions.py
app/parsing/: chunking.py  models.py  tenq_parser.py
app/vectorstore/: base.py  embeddings.py  in_memory.py
infra/: Dockerfile  docker-compose.yml
tests/: test_in_memory_vectorstore.py  test_metadata_cache.py  test_orchestrator_cache_gate.py  test_retrieve_tool.py
